# claude-harvest-mode

./: .gitignore  .julieignore  GAME_DESIGN.md  README.md  editor.html  index.html  package-lock.json  package.json  tilemap.html  tsconfig.json  vite-assets-plugin.ts  vite.config.ts
assets/: barn.map.json  cat.json  chicken.json  chicken_feeder.json  coin.json  cow.json  crop.json  dirt.json  dirt_path.json  dog.json  farm.map.json  farmhand.json  farmhand_cheer.json  fence_h.json  fence_post.json  fence_v.json  flower.json  grass.json  grass_dirt.json  heart.json  house_chim.json  house_door.json  house_rbl.json  house_rbm.json  house_rbr.json  house_rtl.json  house_rtm.json  house_rtr.json  house_wbl.json  house_wbr.json  house_win.json  house_wmb.json  house_wmt.json  house_wtl.json  house_wtr.json  lantern.json  large_feeder.json  recipe.json  sheep.json  squirrel.json  (+21 more)
scripts/: gen-assets.ts  make-cheer.ts  make-critters.ts  make-dual.ts  make-maps.ts  make-placeholders.ts  make-tiles.ts  reshade.ts  test-parser.ts  test-state.ts
src/: appearance.ts  barn.ts  color.ts  config.ts  critter.ts  customizer.ts  daynight.ts  dualgrid.ts  farmer.ts  font.ts  ipc.ts  main.ts  maps.ts  parser.ts  save.ts  sprites.ts  state.ts  tilemap.ts  weather.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/editor/: EditorApp.ts  main.ts  project.ts
src/firmware/: IDisplay.ts  colors.ts
src/platform/: CanvasDisplay.ts  CanvasGfx.ts  CanvasSprite.ts  glcdfont.ts
(+1 files in other folders)
