[package]
name = "harvest-code"
version = "0.0.1"
description = "Claude: Harvest Code — desktop visualizer"
authors = ["dclaywel"]
edition = "2021"

[lib]
name = "harvest_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = "6"
